--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Tommy Fraser
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: ps4 is better than xbox
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F400d259c-14f7-11e8-bd57-2103cff3c1b2.jpg?crop=1500%2C844%2C0%2C78&resize=685
 #
 # Flags below are optional
 #
@@ -21,8 +20,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
+  github: tgf2005.github.io
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
