--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Tommy Fraser
 description: ps4 is better than xbox
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F400d259c-14f7-11e8-bd57-2103cff3c1b2.jpg?crop=1500%2C844%2C0%2C78&resize=685
+avatar: https://m.mimonaija.com/wp-content/uploads/2018/09/EPL-VIDEO-Manchester-United-vs-Tottenham-Hotspur-0-3-2018-All-Goals-Highlights.jpg
 #
 # Flags below are optional
 #
